--- a/QTrkDotNet/QTrkExample/QTrkExample.csproj
+++ b/QTrkDotNet/QTrkExample/QTrkExample.csproj
@@ -52,6 +52,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="ExampleDlg.resx">
+      <DependentUpon>ExampleDlg.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
