--- a/QTrkDotNet/QTrkDotNet.csproj
+++ b/QTrkDotNet/QTrkDotNet.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,6 +45,7 @@
     <Compile Include="QTrkDLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QTrkInstance.cs" />
+    <Compile Include="Util.cs" />
     <Compile Include="Vector3.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
