--- a/QTrkDotNet/QTrkDotNet.csproj
+++ b/QTrkDotNet/QTrkDotNet.csproj
@@ -42,6 +42,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Int23.cs" />
     <Compile Include="QTrkDLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QTrkInstance.cs" />
