--- a/OfflineTracker/App.config
+++ b/OfflineTracker/App.config
@@ -1,6 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="OfflineTracker.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <userSettings>
+        <OfflineTracker.Properties.Settings>
+            <setting name="ExpDir" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="LUTDir" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="ROI" serializeAs="String">
+                <value>0</value>
+            </setting>
+        </OfflineTracker.Properties.Settings>
+    </userSettings>
 </configuration>
