--- a/cputrack/cputrack.vcxproj
+++ b/cputrack/cputrack.vcxproj
@@ -110,6 +110,7 @@
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BeadFinder.cpp" />
     <ClCompile Include="cpu_tracker.cpp" />
     <ClCompile Include="fastjpg.cpp" />
     <ClCompile Include="qtrk_c_api.cpp" />
@@ -121,6 +122,7 @@
     <ClCompile Include="utils.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="BeadFinder.h" />
     <ClInclude Include="cpu_tracker.h" />
     <ClInclude Include="LsqQuadraticFit.h" />
     <ClInclude Include="qtrk_c_api.h" />
